# pycomp

./: .gitignore  README.md  pyproject.toml
src/pycomp/: __init__.py  mnc.py  pds.py
src/pycomp/helpers/: distance.py  knnsnn.py  neighborhood_calculations.py
test/: test_labeled_datasets.py  test_metrics.py
